Fixed spacing FilterCategory and Chips

--- a/packages/pxweb2/src/app/components/FilterSidebar/FilterSidebar.module.scss
+++ b/packages/pxweb2/src/app/components/FilterSidebar/FilterSidebar.module.scss
@@ -19,7 +19,7 @@
 }
 
 .filterList {
-  margin: 20px 0 0;
+  margin: 0 0 24px;
   padding: 0;
   list-style-type: none;
 }
